--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
 nimcache/
 nimblecache/
 htmldocs/
+
+src/wrapper/FFmpeg/
+!src/wrapper/FFmpeg/libavformat/*.h
+!src/wrapper/FFmpeg/libavutil/*.h
+
+src/wrapper/create
+
+examples/*
+!examples/*.nim
